--- a/res/bookentry.ui
+++ b/res/bookentry.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>352</width>
-    <height>551</height>
+    <width>330</width>
+    <height>450</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,11 +16,11 @@
   <property name="styleSheet">
    <string notr="true">QLineEdit{
 	padding:5px 10px;
-	border:1px solid #0005;
+	border:1px solid #00000055;
 	border-radius:10px;
 }
 QLineEdit:hover{
-	border:1px solid #000;
+	border:1px solid #000000;
 }</string>
   </property>
   <widget class="QWidget" name="verticalLayoutWidget">
@@ -28,8 +28,8 @@ QLineEdit:hover{
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>331</width>
-     <height>537</height>
+     <width>311</width>
+     <height>431</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -43,68 +43,28 @@ QLineEdit:hover{
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_5">
-      <property name="spacing">
-       <number>0</number>
-      </property>
-      <property name="sizeConstraint">
-       <enum>QLayout::SetDefaultConstraint</enum>
-      </property>
-      <item>
-       <widget class="QLabel" name="label">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string>Date</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QDateEdit" name="dateEdit">
-        <property name="dateTime">
-         <datetime>
-          <hour>0</hour>
-          <minute>0</minute>
-          <second>0</second>
-          <year>2023</year>
-          <month>1</month>
-          <day>3</day>
-         </datetime>
-        </property>
-        <property name="displayFormat">
-         <string>M/d/yyyy</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <widget class="QLineEdit" name="lineEdit_2">
+     <widget class="QLineEdit" name="dataTitle">
       <property name="placeholderText">
        <string>Title</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="lineEdit_3">
+     <widget class="QLineEdit" name="dataID">
       <property name="placeholderText">
        <string>ID</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="lineEdit_4">
+     <widget class="QLineEdit" name="dataAuthor">
       <property name="placeholderText">
        <string>Author</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="lineEdit_5">
+     <widget class="QLineEdit" name="dataSubject">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -117,28 +77,28 @@ QLineEdit:hover{
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="lineEdit_6">
+     <widget class="QLineEdit" name="dataLanguage">
       <property name="placeholderText">
        <string>Language</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="lineEdit_9">
+     <widget class="QLineEdit" name="dataPrice">
       <property name="placeholderText">
        <string>Price</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="lineEdit_8">
+     <widget class="QLineEdit" name="dataPublisher">
       <property name="placeholderText">
        <string>Publisher</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="lineEdit_7">
+     <widget class="QLineEdit" name="dataYear">
       <property name="placeholderText">
        <string>Year of publication</string>
       </property>
@@ -154,58 +114,43 @@ QLineEdit:hover{
        </widget>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout_2">
-        <item>
-         <widget class="QRadioButton" name="radioButton">
-          <property name="text">
-           <string>General</string>
+       <widget class="QWidget" name="widget_2" native="true">
+        <widget class="QWidget" name="layoutWidget">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>181</width>
+           <height>51</height>
+          </rect>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_2">
+          <property name="sizeConstraint">
+           <enum>QLayout::SetDefaultConstraint</enum>
           </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QRadioButton" name="radioButton_2">
-          <property name="text">
-           <string>Reference</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_3">
-      <item>
-       <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>No. of copies</string>
-        </property>
+          <item>
+           <widget class="QRadioButton" name="radioGeneral">
+            <property name="text">
+             <string>General</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioReference">
+            <property name="text">
+             <string>Reference</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+            <property name="autoExclusive">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
        </widget>
-      </item>
-      <item>
-       <widget class="QSpinBox" name="spinBox"/>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_4">
-      <item>
-       <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>Status</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <layout class="QVBoxLayout" name="verticalLayout_3">
-        <item>
-         <widget class="QRadioButton" name="radioButton_4">
-          <property name="text">
-           <string>Issued</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
       </item>
      </layout>
     </item>
@@ -219,24 +164,55 @@ QLineEdit:hover{
        </widget>
       </item>
       <item>
-       <widget class="QRadioButton" name="radioButton_6">
-        <property name="text">
-         <string>Direct</string>
+       <widget class="QWidget" name="widget_3" native="true">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QRadioButton" name="radioButton_5">
-        <property name="text">
-         <string>Donation</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QRadioButton" name="radioButton_7">
-        <property name="text">
-         <string>Gift</string>
-        </property>
+        <widget class="QWidget" name="horizontalLayoutWidget">
+         <property name="geometry">
+          <rect>
+           <x>30</x>
+           <y>0</y>
+           <width>211</width>
+           <height>51</height>
+          </rect>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_6">
+          <property name="spacing">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QRadioButton" name="radioGift">
+            <property name="text">
+             <string>Gift</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioDonation">
+            <property name="text">
+             <string>Donation</string>
+            </property>
+            <property name="checkable">
+             <bool>true</bool>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioDirect">
+            <property name="text">
+             <string>Direct</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
        </widget>
       </item>
      </layout>
@@ -255,10 +231,10 @@ QLineEdit:hover{
       <property name="styleSheet">
        <string notr="true">#submit{
 	background:rgb(0, 85, 255);
-	border:1px solid #0005;
+	border:1px solid #00000055;
 	padding:5px 10px;
 	border-radius:20px;
-	color:#fff;
+	color:#ffffff;
 }
 #submit:hover{
 	background:rgb(0, 0, 144);
