--- a/res/main.ui
+++ b/res/main.ui
@@ -13,31 +13,15 @@
   <property name="windowTitle">
    <string>Library Management System</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="res.qrc">
+    <normaloff>:/icon/icon.png</normaloff>:/icon/icon.png</iconset>
+  </property>
   <property name="styleSheet">
    <string notr="true">text-align:center;
 </string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QListView" name="bookList">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>40</y>
-      <width>331</width>
-      <height>351</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QListView" name="memberList">
-    <property name="geometry">
-     <rect>
-      <x>360</x>
-      <y>40</y>
-      <width>331</width>
-      <height>351</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
@@ -88,6 +72,72 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QWidget" name="verticalLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>39</y>
+      <width>321</width>
+      <height>341</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QLineEdit" name="bookSearch">
+       <property name="styleSheet">
+        <string notr="true">padding:3px;
+border:1px solid #55000000;</string>
+       </property>
+       <property name="placeholderText">
+        <string>Search</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QListView" name="bookList">
+       <property name="styleSheet">
+        <string notr="true">padding:3px;</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="verticalLayoutWidget_2">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>40</y>
+      <width>321</width>
+      <height>341</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QLineEdit" name="memberSearch">
+       <property name="styleSheet">
+        <string notr="true">padding:3px;
+border:1px solid #55000000;</string>
+       </property>
+       <property name="placeholderText">
+        <string>Search</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QListView" name="memberList">
+       <property name="styleSheet">
+        <string notr="true">padding:3px;</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -124,10 +174,16 @@
     <addaction name="menubook"/>
    </widget>
    <widget class="QMenu" name="menuAquisition">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="title">
      <string>Aquisition</string>
     </property>
     <widget class="QMenu" name="menuBook_2">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="title">
       <string>Book</string>
      </property>
@@ -138,12 +194,18 @@
     <addaction name="menuBook_2"/>
    </widget>
    <widget class="QMenu" name="menuTechnical">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="title">
      <string>Technical</string>
     </property>
     <addaction name="actionCatalogue"/>
    </widget>
    <widget class="QMenu" name="menuReport">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="title">
      <string>Report</string>
     </property>
@@ -159,11 +221,17 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionCatalogue">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Catalogue</string>
    </property>
   </action>
   <action name="actionGeneral">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>General</string>
    </property>
@@ -192,6 +260,9 @@
    </property>
   </action>
   <action name="actionDelete">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Delete</string>
    </property>
@@ -270,6 +341,8 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="res.qrc"/>
+ </resources>
  <connections/>
 </ui>
