--- a/res/res.qrc
+++ b/res/res.qrc
@@ -2,4 +2,7 @@
   <qresource prefix="icon">
     <file>icon.png</file>
   </qresource>
+  <qresource prefix="images">
+    <file>splash.png</file>
+  </qresource>
 </RCC>
